--- a/src/scss/_Info.scss
+++ b/src/scss/_Info.scss
@@ -20,3 +20,7 @@
     margin-left: 10px;
   }
 }
+
+.unavailable-message + .info-item {
+  padding-top: 1rem;
+}
